<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hotelDescription_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp"
    tools:layout_editor_absoluteY="491dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionTitle_textView"
            style="@style/black22medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/about"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/peculiarities_chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            app:chipSpacing="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle_textView" />

        <TextView
            android:id="@+id/hotelDescription_textView"
            style="@style/black16_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!" />

        <androidx.cardview.widget.CardView
            android:id="@+id/hotelAmenities_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/hotelDescription_textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/amenities_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_emoji"
                    app:layout_constraintBottom_toBottomOf="@+id/mostNecessaryAmenities_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/amenities_textView" />

                <TextView
                    android:id="@+id/amenities_textView"
                    style="@style/percularities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/amenities"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/amenities_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mostNecessaryAmenities_textView"
                    style="@style/gray14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/the_most_necessary"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/amenities_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/amenities_textView" />

                <ImageView
                    android:id="@+id/amenitiesArrow_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/mostNecessaryAmenities_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/amenities_textView" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mostNecessaryAmenities_textView" />

                <ImageView
                    android:id="@+id/included_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_checked"
                    app:layout_constraintBottom_toBottomOf="@+id/mostNecessaryIncluded_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/included_textView" />

                <TextView
                    android:id="@+id/included_textView"
                    style="@style/percularities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/included"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/included_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <TextView
                    android:id="@+id/mostNecessaryIncluded_textView"
                    style="@style/gray14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/the_most_necessary"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/included_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/included_textView" />

                <ImageView
                    android:id="@+id/includedArrow_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/mostNecessaryIncluded_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/included_textView" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mostNecessaryIncluded_textView" />

                <ImageView
                    android:id="@+id/notIncluded_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="@+id/mostNecessaryNotIncluded_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notIncluded_textView" />

                <TextView
                    android:id="@+id/notIncluded_textView"
                    style="@style/percularities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/not_included"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/notIncluded_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/divider2" />

                <TextView
                    android:id="@+id/mostNecessaryNotIncluded_textView"
                    style="@style/gray14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/the_most_necessary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/notIncluded_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/notIncluded_textView" />

                <ImageView
                    android:id="@+id/notIncludedArrow_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/mostNecessaryNotIncluded_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notIncluded_textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>